Fixing numerous layout bugs on dashboard

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,11 +24,12 @@ body, html {
   }
 
   .wrapper {
-      min-height: 150%;
-      min-width: 100%;
-      padding: 0px;
+      height: 100%;
+      width: 100%;
       margin: 0px;
+      padding: 0px;
       background-color: #eeeeee;
+      overflow: auto;
     //   background-image: url(./assets/custom-orange.svg);
     //   background-color: blue;
     //   background-repeat: no-repeat;
@@ -190,37 +191,51 @@ body, html {
     }
 
     .router-heading {
+        text-align: center;
         height: 65px;
     }
 
     .router-subheading {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
         margin-bottom: 12px;
+        padding: 16px;
     }
 
 
 
       
 /////////////////// DASHBOARD ////////////////////
-     
-    #test {
-            height: 110vh;
-        }
 
-    .wallet {
-        width: 100%;
-        }
+    // .dashboard-wrapper {
+    //     border: 10px solid black;
+    // }
 
-    .leverage {
-        background-color: rgba(0,0,0,0.05);
+    .dashboard-table {
+        padding-top: 0px;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-bottom: 0px;
     }
 
-    .leverage-label {
-        text-align: right;
-        min-width: 100px;
+    .mat-header-cell {
+        flex: 0 1 80px!important;
+    }
+
+    .mat-cell {
+        flex: 0 1 80px!important;
+    }
+
+    .leverage-wrapper {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    .leverage-content {
+        background-color: rgba(0, 0, 0, 0.05);
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        // margin-top: 20px;
     }
 
     .leverage-input {
@@ -232,37 +247,37 @@ body, html {
         min-width: 170px!important;
         max-height: 30px;
         padding-top: 0px!important;
+        padding-bottom: 20px!important;
     }
 
     .leverage-slider-numbers {
         font-size: 12px;
         color: rgba(0, 0, 0, 0.38)
-
     }
 
-    .test2 {
-        height: 100%;
-        margin-left: 12px;
-        margin-right: 12px;
-        margin-top: 24px;
-        margin-bottom: 24px;
-    }
+    // .test2 {
+    //     height: 100%;
+    //     margin-left: 12px;
+    //     margin-right: 12px;
+    //     margin-top: 24px;
+    //     margin-bottom: 24px;
+    // }
 
-    .red {
-        background-color: red;
-        // width: 80px;
-        // height: 80px;
-    }
+    // .red {
+    //     background-color: red;
+    //     // width: 80px;
+    //     // height: 80px;
+    // }
 
-    .green {
-        background-color: green;
-        // width: 80px;
-        // height: 80px;
-    }
+    // .green {
+    //     background-color: green;
+    //     // width: 80px;
+    //     // height: 80px;
+    // }
 
-    .blue {
-        background-color: blue;
-        // width: 80px;
-        // height: 80px;
-    }
+    // .blue {
+    //     background-color: blue;
+    //     // width: 80px;
+    //     // height: 80px;
+    // }
 
